Fixed viewheight issue. Just add fixHeight class to outer div to fix cutting off issue.

--- a/coffeefe/src/css/App.css
+++ b/coffeefe/src/css/App.css
@@ -23,6 +23,14 @@
   color: white;
 }
 
+html, body {
+  height: 100vh;
+}
+
+.fixHeight {
+  padding-top: 30px;
+  height: 100vh;
+}
 /*.App-link {*/
 /*  color: #61dafb;*/
 /*}*/
